--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,63 @@
+body {
+  display: flex;
+  flex-direction: column;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1rem;
+  line-height: 1.5;
+  min-height: 100vh;
+}
+
 .container {
-  margin: auto;
-  max-width: 800px;
+  padding: 0 15px;
+}
+
+@media (min-width: 575.98px){
+  .container {
+    max-width: 540px;
+    margin: auto;
+    padding: 0;
+  }
+  .gallery {
+    display: block;
+  }
+
+  .advantages {
+    display: block;
+  }
+
+  .card {
+    margin: 15px auto;
+  }
+}
+
+@media (min-width: 767.98px){
+  .container {
+    max-width: 720px;
+  }
+
+  .gallery {
+    display: flex;
+    border-bottom: 2px gray solid;
+    justify-content: space-between;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+
+  .advantages {
+    display: flex;
+  }
+}
+
+@media (min-width: 991.98px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1199.98px){
+  .container {
+    max-width: 1140px;
+  }
 }
 
 .header {
@@ -58,16 +115,16 @@ ul {
   border-bottom: 4px blueviolet solid;
 }
 
-.advantages {
-  display: flex;
-}
-
 .me-3 {
-  margin-right: 15px;
+  margin-right: 1rem;
 }
 
 .mt-3 {
-  margin-top: 15px;
+  margin-top: 1rem;
+}
+
+.mb-3 {
+  margin-bottom: 1rem;
 }
 
 .text-center {
@@ -86,19 +143,12 @@ ul {
   box-shadow: 2px 2px 2px gray;
 }
 
-.gallery {
-  display: flex;
-  border-bottom: 2px gray solid;
-  justify-content: space-between;
-  padding-top: 25px;
-  padding-bottom: 25px;
-}
-
 .photo {
   height: 200px;
   width: 180px;
   border: 1px gray solid;
   border-radius: 5px;
+  margin: 15px auto;
 }
 
 .footer {
